hphp/test/slow/unpack_args/unpack_call_ref.php.expectf
Fatal error: Uncaught exception 'InvalidArgumentException' with message 'has_ref() expects parameter 65 by reference, but the call was not annotated with '&'' in %s/unpack_call_ref.php:75
Stack trace:
#0 (): main()
#1 {main}
